<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationDrawerMenu_item_message"
            android:title="@string/message"
            android:icon="@drawable/ic_message"/>

        <item
            android:id="@+id/navigationDrawerMenu_item_chat"
            android:title="@string/chat"
            android:icon="@drawable/ic_chat"/>

        <item
            android:id="@+id/navigationDrawerMenu_item_profile"
            android:title="@string/profil"
            android:icon="@drawable/ic_profile" />
    </group>

    <item
        android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/navigationDrawerMenu_item_send"
                android:title="@string/send"
                android:icon="@drawable/ic_send"/>
            <item
                android:id="@+id/navigationDrawerMenu_item_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"/>
        </menu>
    </item>
</menu>